{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 146,
  "lineage": "1857a707-6fc2-8a6a-baf4-10b01290ed54",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:vpc/xxxxxxxxx",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0743b708ccbd88356",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c98389a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": ["dev-1"]
              }
            ],
            "id": "xxxxxxxxx",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0ad7618596f7c65b6",
            "ipv6_cidr_block": "2a05:d014:c77:c000::/56",
            "main_route_table_id": "rtb-05ba806743485d752",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ssh_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07df274a488ca9195",
            "arn": "arn:aws:ec2:eu-central-1:722913253728:instance/i-04c71399cc8e83aa6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c71399cc8e83aa6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": ["2a05:d014:c77:c000:9e7:c03c:faf4:e035"],
            "key_name": "dev-1-ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c498db3d95ae8e05",
            "private_dns": "ip-10-0-4-96.eu-central-1.compute.internal",
            "private_ip": "10.0.4.96",
            "public_dns": "ec2-3-68-166-31.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.166.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df819d6ea22679c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0053ab0c54d49a475",
            "tags": {
              "Name": "dev-1-ssh-bastion"
            },
            "tags_all": {
              "Name": "dev-1-ssh-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": ["sg-038a846b8b5ccc6fb"]
          },
          "dependencies": ["data.aws_subnet_ids.public", "data.aws_vpc.vpc"]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0cf80f0e6a190ec8f",
            "tags": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f888cfb891c41931",
            "association_id": "eipassoc-0383cddbead909487",
            "domain": "vpc",
            "id": "eipalloc-0f888cfb891c41931",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-06d8406f238b13310",
            "private_dns": "ip-10-0-4-86.eu-central-1.compute.internal",
            "private_ip": "10.0.4.86",
            "public_dns": "ec2-18-156-14-106.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.14.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-1-eu-central-1a",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-eu-central-1a",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc": true
          },
          "dependencies": ["data.aws_availability_zones.available"]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:internet-gateway/igw-0c58f7a62c65531f5",
            "id": "igw-0c58f7a62c65531f5",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f888cfb891c41931",
            "connectivity_type": "public",
            "id": "nat-03d3fdc8f4d78116c",
            "network_interface_id": "eni-06d8406f238b13310",
            "private_ip": "10.0.4.86",
            "public_ip": "18.156.14.106",
            "subnet_id": "subnet-0053ab0c54d49a475",
            "tags": {
              "Name": "dev-1-eu-central-1a",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-eu-central-1a",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0cf80f0e6a190ec8f",
            "gateway_id": "",
            "id": "r-rtb-00b80fa35ed8038552750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b80fa35ed803855",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0cf80f0e6a190ec8f",
            "gateway_id": "",
            "id": "r-rtb-00b80fa35ed8038552750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b80fa35ed803855",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0cf80f0e6a190ec8f",
            "gateway_id": "",
            "id": "r-rtb-00b80fa35ed8038552750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b80fa35ed803855",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00b80fa35ed8038551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03d3fdc8f4d78116c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b80fa35ed803855",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c58f7a62c65531f5",
            "id": "r-rtb-0898fd2dd567d65e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0898fd2dd567d65e3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c58f7a62c65531f5",
            "id": "r-rtb-0898fd2dd567d65e32750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0898fd2dd567d65e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:route-table/rtb-00b80fa35ed803855",
            "id": "rtb-00b80fa35ed803855",
            "owner_id": "722913253728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0cf80f0e6a190ec8f",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d3fdc8f4d78116c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-1-private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:route-table/rtb-0898fd2dd567d65e3",
            "id": "rtb-0898fd2dd567d65e3",
            "owner_id": "722913253728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c58f7a62c65531f5",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c58f7a62c65531f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-1-public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4fec25d5a7df2a8",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-030ed8844219cddd7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad878bd75b6156b",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-06ccf0cda0e253ee0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e500ae7fac39bb02",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-02095bd5c81ea85c4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adf35491e6bde9c4",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-0a30fc0b2188998f9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0011ee8f9679af952",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-0094c9d9a334226c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b75f1e1cd6c0c408",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-081097bd1a19595a9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6112d76bf163c87",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-039e4e438f8cc154d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093a75949142d6ace",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-0898c1c8f3d074ce8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094ef24b9b9979c6e",
            "route_table_id": "rtb-00b80fa35ed803855",
            "subnet_id": "subnet-07241ee3e44b7375a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cb898bf2120e41d",
            "route_table_id": "rtb-0898fd2dd567d65e3",
            "subnet_id": "subnet-0053ab0c54d49a475"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0301e0b8423a5086d",
            "route_table_id": "rtb-0898fd2dd567d65e3",
            "subnet_id": "subnet-0b969ac895aac6f67"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c127d33cab9ad796",
            "route_table_id": "rtb-0898fd2dd567d65e3",
            "subnet_id": "subnet-04b810697949ccbb6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-030ed8844219cddd7",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030ed8844219cddd7",
            "ipv6_cidr_block": "2a05:d014:c77:c006::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-02b236eb120754656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-db-eu-central-1a",
              "Tier": "Database",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-db-eu-central-1a",
              "Tier": "Database",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-06ccf0cda0e253ee0",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ccf0cda0e253ee0",
            "ipv6_cidr_block": "2a05:d014:c77:c007::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-029e3612f6ae1e8c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-db-eu-central-1b",
              "Tier": "Database",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-db-eu-central-1b",
              "Tier": "Database",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-02095bd5c81ea85c4",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02095bd5c81ea85c4",
            "ipv6_cidr_block": "2a05:d014:c77:c008::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0fcbed84f3079bcf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-db-eu-central-1c",
              "Tier": "Database",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-db-eu-central-1c",
              "Tier": "Database",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0a30fc0b2188998f9",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30fc0b2188998f9",
            "ipv6_cidr_block": "2a05:d014:c77:c009::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01ec27c2a6474cfc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-elasticache-eu-central-1a",
              "Tier": "ElastiCache",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-elasticache-eu-central-1a",
              "Tier": "ElastiCache",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0094c9d9a334226c2",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0094c9d9a334226c2",
            "ipv6_cidr_block": "2a05:d014:c77:c00a::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a24566f4b285f9a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-elasticache-eu-central-1b",
              "Tier": "ElastiCache",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-elasticache-eu-central-1b",
              "Tier": "ElastiCache",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-081097bd1a19595a9",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081097bd1a19595a9",
            "ipv6_cidr_block": "2a05:d014:c77:c00b::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0f36bb721369371c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-elasticache-eu-central-1c",
              "Tier": "ElastiCache",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1-elasticache-eu-central-1c",
              "Tier": "ElastiCache",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-039e4e438f8cc154d",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039e4e438f8cc154d",
            "ipv6_cidr_block": "2a05:d014:c77:c003::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d95d7fb314e0054a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-private-eu-central-1a",
              "Tier": "Private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-1-private-eu-central-1a",
              "Tier": "Private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0898c1c8f3d074ce8",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0898c1c8f3d074ce8",
            "ipv6_cidr_block": "2a05:d014:c77:c004::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05aa76c925df4aed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-private-eu-central-1b",
              "Tier": "Private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-1-private-eu-central-1b",
              "Tier": "Private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-07241ee3e44b7375a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07241ee3e44b7375a",
            "ipv6_cidr_block": "2a05:d014:c77:c005::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-050a58578cb9103af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-private-eu-central-1c",
              "Tier": "Private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-1-private-eu-central-1c",
              "Tier": "Private",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0053ab0c54d49a475",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0053ab0c54d49a475",
            "ipv6_cidr_block": "2a05:d014:c77:c000::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-08ca2a3165bf1fb4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-public-eu-central-1a",
              "Tier": "Public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-1-public-eu-central-1a",
              "Tier": "Public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-0b969ac895aac6f67",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b969ac895aac6f67",
            "ipv6_cidr_block": "2a05:d014:c77:c001::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-084b36364776745e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-public-eu-central-1b",
              "Tier": "Public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-1-public-eu-central-1b",
              "Tier": "Public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:subnet/subnet-04b810697949ccbb6",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b810697949ccbb6",
            "ipv6_cidr_block": "2a05:d014:c77:c002::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-07cbf70d40e4be611",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722913253728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-1-public-eu-central-1c",
              "Tier": "Public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-1-public-eu-central-1c",
              "Tier": "Public",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "xxxxxxxxx"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:vpc/xxxxxxxxx",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060c628479235fed3",
            "default_route_table_id": "rtb-05ba806743485d752",
            "default_security_group_id": "sg-038a846b8b5ccc6fb",
            "dhcp_options_id": "dopt-c98389a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "xxxxxxxxx",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0ad7618596f7c65b6",
            "ipv6_cidr_block": "2a05:d014:c77:c000::/56",
            "ipv6_cidr_block_network_border_group": "eu-central-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ba806743485d752",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            },
            "tags_all": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            }
          }
        }
      ]
    }
  ]
}